eks-deployment/argocd/platform/argo-rollouts-edge/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-rollouts-dashboard-edge
  namespace: argo-rollouts
  annotations:
    alb.ingress.kubernetes.io/group.name: smart-parking-prod-edge
    alb.ingress.kubernetes.io/group.order: "11"
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /rollouts
    alb.ingress.kubernetes.io/success-codes: "200-399"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /rollouts
            pathType: Prefix
            backend:
              service:
                name: argo-rollouts-dashboard
                port:
                  number: 3100
